src/test/ui/did_you_mean/issue-38147-2.nll.stderr
error[E0596]: cannot borrow `*self.s` as mutable, as it is behind a `&` reference
  --> $DIR/issue-38147-2.rs:17:9
   |
LL |         self.s.push('x');
   |         ^^^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
